Made the next page token as a return value
